testsuite/tests/driver/werror.stderr

werror.hs:6:1: error: [-Wmissing-signatures (in -Wall), -Werror=missing-signatures]
    Top-level binding with no type signature: main :: IO ()

werror.hs:7:13: error: [-Wname-shadowing (in -Wall), -Werror=name-shadowing]
    This binding for ‘main’ shadows the existing binding
      defined at werror.hs:6:1

werror.hs:7:13: error: [-Wunused-local-binds (in -Wextra, -Wunused-binds), -Werror=unused-local-binds]
    Defined but not used: ‘main’

werror.hs:8:1: error: [-Wtabs (in -Wdefault), -Werror=tabs]
    Tab character found here.
    Please use spaces instead.

werror.hs:10:1: error: [-Wunused-top-binds (in -Wextra, -Wunused-binds), -Werror=unused-top-binds]
    Defined but not used: ‘f’

werror.hs:10:1: error: [-Wmissing-signatures (in -Wall), -Werror=missing-signatures]
    Top-level binding with no type signature: f :: [a1] -> [a2]

werror.hs:10:1: error: [-Wincomplete-patterns (in -Wextra), -Werror=incomplete-patterns]
    Pattern match(es) are non-exhaustive
    In an equation for ‘f’: Patterns not matched: (_:_)

werror.hs:11:1: error: [-Woverlapping-patterns (in -Wdefault), -Werror=overlapping-patterns]
    Pattern match is redundant
    In an equation for ‘f’: f [] = ...
